--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="/style.css">
   <title>超好看的轮播?</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -29,8 +29,8 @@
       </div>
   </div>
 
-  <script src="jquery-3.2.1.min.js"></script>
-  <script src="main.js"></script>
+  <script src="./jquery-3.2.1.min.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
