--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>超好看的轮播?</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -17,7 +17,7 @@
           <img src="./coc hogrider.png" width="400" height="400" alt="side">
           <img src="./coc pekka.png" width="400" height="400" alt="side">
           <img src="./coc valkyrie.png" width="400" height="400" alt="side">
-          <a href="https://coc.kunlun.com/" target="_blank"></a><img src="./coc bbKing.png" width="400" height="400"
+          <a href="https://coc.kunlun.com/" target="_blank"><img src="./coc bbKing.png" width="400" height="400"
             alt="side"></a>
         </div>
       </div>
